[project]
name = "ipush"
version = "0.1.1"
description = "Push for python"
authors = [
    { name = "Jetsung Chan", email = "jetsungchan@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "lxml>=4.9.4",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: Chinese (Simplified)',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Communications :: Email',
]
[project.urls]
Homepage = "https://git.jetsung.com/idev/pypush"
Documentation = "https://framagit.org/idev/pypush"
Repository = "https://framagit.org/idev/pypush.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.9",
    "pre-commit>=3.5.0",
    "pytest>=7.4.3",
]

[tool.rye.scripts]
# unittest = { cmd = "python -m unittest discover tests" }
tests = { cmd = "python -m pytest" }
format = { cmd = "python -m ruff format ." }
check = { cmd = "python -m ruff check . --fix" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ipush"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
show-source = true
# line-length = 100
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
# indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
