[project]
name = "ipush"
version = "0.3.0"
description = "APP 推送通知。支持往 钉钉群、飞书群、Lark 群、Bark、Chanify、PushDeer、PushPlus、Showdoc、息知 推送消息。"
authors = [
    { name = "Jetsung Chan", email = "jetsungchan@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "lxml>=4.9.4",
]
readme = "README.md"
license ={ file = "LICENSE" }
keywords = ["push", "notify", "dingtalk", "feishu", "lark", "bark", "chanify", "pushdeer", "pushplus", "showdoc", "xizhi"]
requires-python = ">= 3.8"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: Chinese (Simplified)',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Communications :: Email',
    'Topic :: Software Development :: Libraries',
]
[project.urls]
Homepage = "https://git.jetsung.com/idev/pypush"
Documentation = "https://pypush.skiy.net/"
Repository = "https://github.com/idevsig/pypush"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.9",
    "pre-commit>=3.5.0",
    "pytest>=7.4.3",
]

[tool.rye.scripts]
# unittest = { cmd = "python -m unittest discover tests" }
tests = { cmd = "python -m pytest" }
format = { cmd = "python -m ruff format ." }
check = { cmd = "python -m ruff check . --fix" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ipush"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
show-source = true
# line-length = 100
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
# indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
